possibly fixed aligning on live site

--- a/art.css
+++ b/art.css
@@ -8,7 +8,7 @@ article {
     left: 0;
     right: 0;
     bottom: 0;
-    padding-top: 15em;
+    padding-top: 8em;
     position: fixed;
     text-align: justify;
     justify-content: center;
@@ -19,6 +19,8 @@ article {
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
     scroll-behavior: smooth;
+    -webkit-mask-image: linear-gradient(transparent, white 15%);
+    mask-image: linear-gradient(transparent, white 15%);
 }
 
 .card {
@@ -27,14 +29,23 @@ article {
     margin: 1em;
     border-radius: 20px;
     filter: drop-shadow(5px 5px 5px black);
+    align-items: center;
+    display: flex;
+    align-content: center;
+    justify-content: center;
     text-align: center;
     overflow: hidden;
     background: linear-gradient(to bottom, rgb(224, 175, 255), rgb(104, 195, 251));
 }
 
 .card>img {
+    width: 100%;
     height: 100%;
-    object-fit: fill;
+    margin: auto;
+    padding: auto;
+    align-self: center;
+    object-position: right;
+    object-fit: cover;
 }
 
 .contact-card {
